2011-10-17  Meteor Liu  <meteor1113@gmail.com>

	* Update emacs-calfw from v1.2 to v1.3

2011-10-16  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (and): Set auto-complete for eshell.

2011-10-12  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("sqlplus"): Use mouse-2 instead of c-mouse-1.

2011-10-05  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (user-include-dirs): Fix user-include-dirs.

2011-09-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("tabbar"): Fix tabbar font in win7.

	* init-site.el (boundp): Fix ecb compatible with emacs24, because stack-trace-on-error.

2011-09-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (my-c-mode-font-lock-if0): comment if0 in c/c++-mode.

2011-09-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (kbd): Bind M-SPC to set-mark-command instead of C-SPC.

2011-09-02  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (dired-dwim-target): dired.

2011-08-30  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-dir-format): Fix grep.

2011-08-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("\C-xo"): Add win-switch.el

2011-08-23  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Why nyan-wavy-trail no effect in gnu/linux.

2011-08-22  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (nyan-mode): Add nyan-mode.
	(and): Fix nyan-mode.

2011-08-19  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (cfw:open-org-calendar): Update calfw to v1.2

	* init-basic.el (chmod+x): Fix chmod+x.

2011-08-17  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (and): Fix ac-modes.

	* init-toolbar.el (misc-sub-menu): Add multi-term menu item.

2011-08-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Fix auto-mode-alist.

	* init-misc.el (auto-mode-alist): Fix auto-mode-alist for plsql-mode.

	* init-toolbar.el (language-sub-menu): Add plsql-mode major-mode.

2011-08-11  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (and): Fix auto-complete for ielm-mode.
