@@ -1,3 +1,7 @@
+2011-10-19  Meteor Liu  <meteor1113@gmail.com>
+
+	* lisp/codepilot/misc/smart-hl.el: Get a new smart-hl.el for emacs24.
+
 2011-10-17  Meteor Liu  <meteor1113@gmail.com>
 
 	* Update emacs-calfw from v1.2 to v1.3
